tests/errors/syn_if2.java
public class syn_if2 {
public static void main(String[] args){
( true || false ) {
 
}
}
}